<resources>
    <string name="app_name">Vehicle</string>
    <string name="description">Description</string>
    <string name="year">Year</string>
    <string name="owner">Owner</string>
    <string name="email_owner">Email owner</string>
    <string name="price">Price</string>
    <string name="accessories">Accessories</string>
    <string name="alarm">Alarm</string>
    <string name="airConditioning">Air conditioning</string>
    <string name="powerWindows">Power windows</string>
    <string name="send">Send</string>
    <string name="reset">Reset</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="type_validation">must be typed</string>
    <string name="email_subject">Vehicle Information</string>
</resources>
