<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout style="@style/AppLinearLayoutFields">

            <TextView
                style="@style/AppTextViewFields"
                android:drawableLeft="@drawable/ic_drive_eta_black_24dp" />

            <EditText
                android:id="@+id/edit_text_description"
                style="@style/AppEditTextFields"
                android:hint="@string/description"
                android:inputType="textCapWords"
                android:maxLength="40" />

        </LinearLayout>

        <LinearLayout style="@style/AppLinearLayoutFields">

            <TextView
                style="@style/AppTextViewFields"
                android:drawableLeft="@drawable/ic_today_black_24dp" />

            <EditText
                android:id="@+id/edit_text_year"
                style="@style/AppEditTextFields"
                android:hint="@string/year"
                android:inputType="number"
                android:maxLength="4" />

        </LinearLayout>

        <LinearLayout style="@style/AppLinearLayoutFields">

            <TextView
                style="@style/AppTextViewFields"
                android:drawableLeft="@drawable/ic_account_box_black_24dp" />

            <EditText
                android:id="@+id/edit_text_owner"
                style="@style/AppEditTextFields"
                android:hint="@string/owner"
                android:inputType="textCapWords"
                android:maxLength="40" />

        </LinearLayout>

        <LinearLayout style="@style/AppLinearLayoutFields">

            <TextView
                style="@style/AppTextViewFields"
                android:drawableLeft="@drawable/ic_email_black_24dp" />

            <EditText
                android:id="@+id/edit_text_email_owner"
                style="@style/AppEditTextFields"
                android:hint="@string/email_owner"
                android:inputType="textEmailAddress"
                android:maxLength="60" />

        </LinearLayout>

        <LinearLayout style="@style/AppLinearLayoutFields">

            <TextView
                style="@style/AppTextViewFields"
                android:drawableLeft="@drawable/ic_monetization_on_black_24dp" />

            <EditText
                android:id="@+id/edit_text_price"
                style="@style/AppEditTextFields"
                android:hint="@string/price"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/accessories"
            android:textAllCaps="true"
            android:textAppearance="?android:textAppearanceSmall" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/check_box_alarm"
                style="@style/AppCheckBox"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/alarm" />

            <CheckBox
                android:id="@+id/check_box_power_windows"
                style="@style/AppCheckBox"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/powerWindows" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/check_box_air_conditioning"
            style="@style/AppCheckBox"
            android:layout_width="wrap_content"
            android:text="@string/airConditioning" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_send"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:onClick="send"
                android:text="@string/send" />

            <Button
                android:id="@+id/button_reset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:onClick="reset"
                android:text="@string/reset" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>